[package]
name = "adblock-coffee"
version = "1.1.7"
edition = "2021"
authors = ["Bread White <breadrock1@gmail.com>"]

[lib]
crate_type = ["cdylib"]

[dependencies]
anyhow = "1.0.95"
adblock = "0.9.4"
env_logger = "0.11.3"
jni = "0.21.1"
lazy_static = "1.5.0"
log = "0.4.22"
once_cell = "1.19.0"
thiserror = "2.0.9"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "^0.14"
